# dio-revisando-python

./: README.md  pyproject.toml
01_conceitos_basicos/: 03_ajudas.py  04_variaveis_constantes.py  05_conversao_tipos.py  06_funcoes_entrada_saida.py  07_operadores_aritimeticos.py  09_operadores_atribuicao.py
02_estruturas_condicionais_repeticao/: 01_identacao_blocos.py  02_estruturas_condicionais.py  03_estruturas_repeticao.py
03_dominando_strings_fatiamento/: 01_metodos_classe_string.py  02_interpolacao_variaveis.py  03_fatiamento_string.py  04_string_multiplas_linhas.py
04_estruturas_dados/: 01_listas.py  02_listas_metodos.py  03_tuplas.py  04_tplas_metodos.py  05_conjuntos.py  06_conjuntos_metodos.py  07_dicionario.py  08_dicionario_metodos.py
05_Funcoes/: 01_funcoes.py
06_Programacao_Orientada_Objetos/: README.md  cachorro.py
07_data_hora_fusohorario/: 01_datetime.py  02_timedelta.py  03_strftime_strptime.py  04_pytz.py  05_timezone.py  README.md
08_manipulando_arquivos/: 1_operacao_leitura.py  2_operacao_escrita.py  3_os_shutil.py  4_tratamento_erro.py  5_boas_praticas.py  6_csv.py  README.md  lorem.txt  teste.txt
09_gerenciando_pacotes_convencoes_boas_praticas/: README.md
conceitos_basicos/: 02_tipos.py  08_operadores _comparacao.py  10_operadores_logicos.py  11_operadores_identidade.py  12_operadores_associacao.py
